; ModuleID = '/home/carl/AnghaBench/timescaledb/src/loader/extr_loader.c_load_utility_cmd.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/loader/extr_loader.c_load_utility_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @load_utility_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_utility_cmd(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @nodeTag(i32* %4)
  switch i32 %5, label %18 [
    i32 128, label %6
    i32 131, label %9
    i32 130, label %12
    i32 129, label %15
  ]

6:                                                ; preds = %1
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @should_load_on_variable_set(i32* %7)
  store i32 %8, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @should_load_on_alter_extension(i32* %10)
  store i32 %11, i32* %2, align 4
  br label %19

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @should_load_on_create_extension(i32* %13)
  store i32 %14, i32* %2, align 4
  br label %19

15:                                               ; preds = %1
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @should_load_on_drop_extension(i32* %16)
  store i32 %17, i32* %2, align 4
  br label %19

18:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %15, %12, %9, %6
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @nodeTag(i32*) #1

declare dso_local i32 @should_load_on_variable_set(i32*) #1

declare dso_local i32 @should_load_on_alter_extension(i32*) #1

declare dso_local i32 @should_load_on_create_extension(i32*) #1

declare dso_local i32 @should_load_on_drop_extension(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
